@@ -4,6 +4,7 @@ Changes in <next version>:
    when import 2D data
  * Rewrite of widget tree internals to fix miscellaneous bugs
  * Optionally use astropy for SAMP
+ * Add setting to extend the python import path
 
 Bug fixes
  * Fix faulty caching of datasets expressions
